Cambios Heroe.html

--- a/02-spa/src/app/componentes/footer/footer.component.html
+++ b/02-spa/src/app/componentes/footer/footer.component.html
@@ -1,3 +1,9 @@
 <div class="footer">
-    <h3>esto es el footer</h3>
+    <p>&copy; 2024 Mi Sitio Web. Todos los derechos reservados.</p>
+        <p>
+            <a href="#">Inicio</a> |
+            <a href="#">Acerca de</a> |
+            <a href="#">Contacto</a> |
+            <a href="#">Política de Privacidad</a>
+        </p>
 </div>
