--- a/02-spa/src/app/componentes/heroes/heroes.component.html
+++ b/02-spa/src/app/componentes/heroes/heroes.component.html
@@ -1,37 +1,20 @@
 
 
-<div class="container py-5" >
-    <div class="p-5 mb-4 bg-light rounded-3">
-      <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">¡Bienvenido a ComicApp!</h1>
-        <p class="col-md-8 fs-4"> Explora el universo de tus superhéroes favoritos con nuestra amplia colección de cómics. Desde los clásicos hasta las últimas novedades, todo al alcance de tus manos..</p>
-        <button class="btn btn-primary btn-lg" type="button">Descubre más</button>
-      </div>
-    </div>
-  </div>
-<div class="container">
-  <div class="row row-cols-1 row-cols-md-3 g-4"  animated fadeIn fast>
-    <div class="col" *ngFor="let heroe of heroes; let i = index">
-      <div class="card h-100"  >
-        <img [src] ="heroe.img" class="card-img-top" alt="...">
-        <div class="card-body" >
-        <h5 class="card-title">{{heroe.nombre}}</h5>
-        <p class="card-text">{{heroe.bio}}
-        </p>
-        <!--para que el botton se ajuste como queremos no usamos btn-outline-primary btn-block 
-        si no w-100 = whidth 100%-->
+<div class="container py-2">
+  <div class="p-1 mb-2 bg-light rounded-3">
+    <div class="container-fluid py-5">
+      <h1 class="display-5 fw-bold">Estos son todos nuestros Héroes</h1>
+      <p class=" fs-4 texto"> Explora el universo de tus superhéroes favoritos con nuestra amplia colección de cómics. Desde los clásicos hasta las últimas novedades, todo al alcance de tus manos..
 
-
-
-       
-        
-
-        <a [routerLink]="['heroe', i]" routerLinkActive="router-link-active" class="btn btn-outline-primary" >Ver más...</a>
-
-
-        </div>
-
-      </div>
+      </p> <br><br>
+     <!-- <button class="btn btn-primary btn-lg" type="button">Descubre más</button>-->
     </div>
   </div>
 </div>
+
+<div class="carta">
+<!-- *ngFor="let heroe of heroes; let i = index" -->
+<app-heroe-tarjeta (heroeSeleccionado)="verHeroe( $event )" [heroe]="foo" [index]="i"  *ngFor="let foo of heroes; let i = index"></app-heroe-tarjeta>
+
+</div>
+
